feat: adding new slide problems

--- a/index.html
+++ b/index.html
@@ -35,20 +35,7 @@
 					</section>
 
 					<section data-autoslide="10000">
-						<h4>
-							about me:
-						</h4>
-						<strong>
-							<em>Shamsiddin Avezov</em>
-						</strong>
-						<br>
-						<br>
-						<h4>
-							info:
-						</h4>
-						<strong>
-							<em>Student at INHA university in Tashkent</em>
-						</strong>
+						
 						<br>
 						<br>
 						<h4>
@@ -60,6 +47,19 @@
 						<aside class="notes">
 							test note
 						</aside>
+					</section>
+				</section>
+
+
+				<section>
+					<section data-autoslide="7000">
+						<h4>Plroblem</h4>
+					</section>
+
+					<section data-autoslide="5000">
+						<h4>
+
+						</h4>
 					</section>
 				</section>
 
@@ -153,7 +153,7 @@
 					<img src="src/images/Screenshot_20200108_164533.png" alt="">
 				</section>
 
-				<section>
+				<section data-aoutoslide="5000">
 					<img src="src/images/Screenshot_20200103_151948.png" alt="">
 				</section>
 
