fix: fix auto-sliding problem

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<aside class="notes">
 							82.8% of people wants to have mentor in their life. Only 17.2% doesn't need a Mentor
 						</aside>
-					</section data-autoslide="7000">
+					</section>
 
 					<section data-autoslide="7000">
 						<img src="src/images/Screenshot_20200110_232118.png" alt="">
