--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
 				<section data-autoslide="7000">
 					<h5 style="color: #9D2231;">Expectations from investors:</h5>
 					<br>
-					<p>Payment for developers: 3 person, $500 each <br> $9000 in 6 months</p>
+					<p>Payment for developers: 2 people, $500 each <br> $6000 in 6 months</p>
 					<p>Server: $50 for month, $300 in total</p>
 					<p>Advertisement: 1, $300 for month, $1800 in total</p>
-					<p>Overall: <strong style="color: #9D2231;">$11200</strong></p>
+					<p>Overall: <strong style="color: #9D2231;">$9200</strong></p>
 				</section>
 
 
